# Warden

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  warden.conf
src/: config.cpp  config.h  display.cpp  kill_utils.cpp  kill_utils.h  main.cpp  process.cpp  process.h
test/: config_tests.cpp
tests/: config_tests.cpp  kill_utils_tests.cpp  process_tests.cpp
tests/example_files/: no_limit_config.conf  reg_config.conf
